# warehouse-wms

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/locales/: en.yml  pt-BR.yml
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/migrations/2026-03-23-054330_create_users/: up.sql
backend/migrations/2026-03-23-061153_create_profiles/: down.sql  up.sql
backend/migrations/2026-03-23-063456_create_alert_configs/: down.sql  up.sql
backend/migrations/2026-03-23-063506_create_slots/: down.sql  up.sql
backend/migrations/2026-03-23-063511_create_movements/: down.sql  up.sql
backend/migrations/2026-03-30-225146_create_roles/: down.sql  up.sql
backend/migrations/2026-03-30-225203_create_users_roles/: down.sql  up.sql
backend/migrations/2026-03-30-230608_create_refresh_tokens/: up.sql
backend/migrations/2026-03-30-234022_create_audit_logs/: down.sql  up.sql
backend/src/: api_docs.rs  errors.rs  main.rs
backend/src/auth/: mod.rs  password.rs  password_test.rs
backend/src/config/: app_config.rs  mod.rs
backend/src/controllers/: auth_controller.rs  export_controller.rs  generic_controller.rs  health_controller.rs  mod.rs  movements_controller.rs  slots_controller.rs  users_controller.rs  ws_controller.rs
backend/src/db/: database.rs  mod.rs  schema.rs
backend/src/errors/: app_error.rs  app_error_impl.rs  mod.rs
backend/src/middleware/: api_key_middleware.rs  auth.rs  auth_middleware.rs  mod.rs  rate_limit_middleware.rs  rbac.rs  require_role_middleware.rs
backend/src/models/: alert_config.rs  audit_log.rs  mod.rs  movement.rs  profile.rs  refresh_token.rs  role.rs  slot.rs  user.rs  user_role.rs
backend/src/repositories/: alert_configs_repository.rs  audit_logs_repository.rs  base.rs  base_repository.rs  container.rs  macros.rs  mod.rs  movements_repository.rs  profiles_repository.rs  refresh_tokens_repository.rs  slots_repository.rs  users_repository.rs
backend/src/repositories/traits/: mod.rs
backend/src/routes/: router.rs
backend/src/services/: e2e_keys_service.rs  mod.rs  token.rs
backend/src/utils/: mod.rs  pagination.rs  slug.rs
backend/src/ws/: server.rs
frontend/: .env.example  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/assets/css/: main.css
frontend/app/components/: ActionPanel.vue  AppFooter.vue  AppHeader.vue  AppToast.vue  SlotGrid.vue
frontend/app/composables/: useAlerts.ts  useApi.ts  useAuth.ts  useAuthApi.ts  useKeyStore.ts  useWarehouseApi.ts  useWarehouseStore.ts  useWarehouseWS.ts
frontend/app/layouts/: auth.vue  default.vue  landing.vue
frontend/app/middleware/: admin.ts  auth.global.ts  auth.ts
frontend/app/pages/: dashboard.vue  history.vue  index.vue  login.vue  password_recovery.vue  password_reset.vue  register.vue  settings.vue  slots-crud.vue  ws-test.vue
frontend/app/pages/admin/: dashboard.vue  history.vue  map.vue  settings.vue  slots-crud.vue
frontend/app/pages/auth/: login.vue  password_recovery.vue  password_reset.vue  register.vue
frontend/app/plugins/: api.ts  auth-init.client.ts  auth.client.ts  flyonui.client.ts
frontend/app/stores/: auth.ts
frontend/app/types/: api.ts  auth.ts  index.ts
frontend/i18n/locales/: en.json  pt-BR.json
frontend/plugins/: flyonui.client.ts
frontend/public/: ws-test-no-messages.html  ws-test-simple.html
frontend/server/api/proxy/: [...path].ts
